--- a/app/app_server/views/movie-details.pug
+++ b/app/app_server/views/movie-details.pug
@@ -4,11 +4,9 @@ block content
   //- Movie Synopsis Section
   section.jumbotron.text-center
     .container
-      h1.jumbotron-heading-text= pageHeader.heading
+      h1.jumbotron-heading-text= pageTitle
       br
-      p.lead.text-white= pageHeader.tagline
-      br
-      p.text-white= pageHeader.statement
+      p.lead.text-justify= pageHeader.message
     br
     br
     .container
@@ -18,19 +16,19 @@ block content
           .card-body.bg-light.text-white
             .card-block.bg-dark
               br
-              h3.card-title-text.text-warning.text-center= movie.title
-              h4.card-title-text.text-warning.text-center= (movie.year)
+              h2.card-title-text.text-warning.text-center= movie.title
+              h3.card-title-text.text-warning.text-center= (movie.year)
               img.img-fluid.mx-auto.d-block.border.border-dark(width="40%", src= movie.poster)
               br
-              h4.card-title-text.text-warning.text-center= movie.length
-              h4.card-title-text.text-warning.text-center Rating: #{movie.rating}
+              h3.card-title-text.text-warning.text-center= movie.length
+              h3.card-title-text.text-warning.text-center Rating: #{movie.rating}
               span.badge.badge-success.text-justify-content-center.text-dark.font-italic #{movie.genres[0]} || #{movie.genres[1]} || #{movie.genres[2]}
               br
               br
               p.card-text.text-justify-content-center= movie.summary
               .container
                 .btn-toolbar-justify-content-center(role="toolbar", aria-label="Show Times Toolbar")
-                  h4.card-title-text.text-warning.text-center #{movie.frequency} in Theater ##{movie.theaterNum}
+                  h3.card-title-text.text-warning.text-center #{movie.frequency} in Theater ##{movie.theaterNum}
                   .btn-group.mr-2(role="group", aria-label="First Showtime")
                     a.btn-link(href="/movies/reserve")
                       button.btn.btn-outline-light.text-success(type="button")= movie.showtimes[0]
