--- a/app/app_server/views/layout.pug
+++ b/app/app_server/views/layout.pug
@@ -7,36 +7,96 @@ html
     link(rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-beta/css/bootstrap.min.css" integrity="sha384-/Y6pD6FV/Vv2HJnA6t+vslU6fwYXjCFtcEpHbNJ0lyAFsXTsjBbfaDjzALeQsN6M" crossorigin="anonymous")
     link(href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css", rel="stylesheet", integrity="sha384-wvfXpqpZZVQGK6TAh5PVlGOfQNHSoD2xbE+QkPxCAFlNEevoEH3Sl0sibVcOQVnN", crossorigin="anonymous")
     link(rel="stylesheet", href="/stylesheets/style.css")
-    
+
   body
-    //- Atomic Films Brand Section
-    .container#af-brand
-      .atomicFilms-brand-text.float-left= title
-      .row
-        .col-12.col-md-10
-      //- Navbar Nav Items
-      nav.navbar.navbar-expand-md
-        button.navbar-toggler.bg-light(type="button", data-toggle="collapse", data-target="#collapseNavbar")
-          span.toggler-icon.text-center Menu
-        #collapseNavbar.collapse.navbar-collapse
-          ul.nav.mx-auto.justify-content-center
+    nav.navbar.navbar-expand-md.navbar-dark.bg-light
+      .container-fluid
+        a.navbar-brand(href='/')
+          .brand-text.float-left Atomic Films
+            i.fa.fa-film.fa-sm(aria-hidden='true')
+        button.navbar-toggler(type='button', data-toggle='collapse', data-target='#mainNavBar')
+          span.navbar-toggler-icon
+        #mainNavBar.collapse.navbar-collapse
+          ul.navbar-nav.ml-auto
             li.nav-item
-              a.nav-link.active.font-weight-bold(href="/") Featured
-            li.nav-item
-              a.nav-link.active.font-weight-bold(href="/movies") Details
-            li.nav-item
-              a.nav-link.active.font-weight-bold(href="/movies/reserve") Reserve
-            li.nav-item
-              a.nav-link.active.font-weight-bold(href="/contact") Contact
-      //- End Navbar
- 
-      block content
-      //- Footer Section
-      footer.text-left
-        .container
-          .row
-            p.af-footer-text.font-weight-bold 2017 &copy; Atomic Films
-              
-      script(src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous")
-      script(src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.11.0/umd/popper.min.js" integrity="sha384-b/U6ypiBEHpOf/4+1nzFpr53nxSS+GLCkfwBdFNTxtclqqenISfwAzpKaMNFNmj4" crossorigin="anonymous")
-      script(src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-beta/js/bootstrap.min.js" integrity="sha384-h0AbiXch4ZDo7tp9hKZ4TsHbi047NrKGLO3SEJAg45jXxnGIfYzk4Si90RDIqNm1" crossorigin="anonymous")
+              a.nav-link.text-dark(href='/about') About AF
+    br
+    br
+    
+    block content
+    //- Footer Section
+    footer.fixed-bottom.bg-atomicfilms-color.text-right
+      .container-fluid.bg-light
+        .af-footer-text 2017 &copy; Atomic Films
+
+    script(src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous")
+    script(src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.11.0/umd/popper.min.js" integrity="sha384-b/U6ypiBEHpOf/4+1nzFpr53nxSS+GLCkfwBdFNTxtclqqenISfwAzpKaMNFNmj4" crossorigin="anonymous")
+    script(src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-beta/js/bootstrap.min.js" integrity="sha384-h0AbiXch4ZDo7tp9hKZ4TsHbi047NrKGLO3SEJAg45jXxnGIfYzk4Si90RDIqNm1" crossorigin="anonymous")
+
+
+
+
+//-
+  - - - - - - - - - THIS IS JASON'S MAIN HOME PAGE LAYOUT - - - - KEEP AS REFERENCE
+  nav.navbar.navbar-expand-md.navbar-light.bg-danger
+    .container
+      a.navbar-brand(href='/')
+        .brand-text.float-left Atomic Films
+        i.fa.fa-film.fa-lg(aria-hidden='true')
+      button.navbar-toggler(type='button', data-toggle='collapse', data-target='#collapseNavbar')
+        span.navbar-toggler-icon
+      #collapseNavbar.collapse.navbar-collapse
+        ul.nav.mx-auto.justify-content-center
+          li.nav-item
+            a.nav-link.active.font-weight-bold(href="/") Movies
+          li.nav-item
+            a.nav-link.active.font-weight-bold(href="/movies") Details
+          li.nav-item
+            a.nav-link.active.font-weight-bold(href="/movies/reserve") Reserve
+          li.nav-item
+            a.nav-link.active.font-weight-bold(href="/contact") Contact
+
+  footer.fixed-bottom.bg-dark.text-right
+    .container
+      .footer-text ©2017 Atomic Films
+      
+  script(src='https://code.jquery.com/jquery-3.2.1.slim.min.js', integrity='sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN', crossorigin='anonymous')
+  script(src='https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.11.0/umd/popper.min.js', integrity='sha384-b/U6ypiBEHpOf/4+1nzFpr53nxSS+GLCkfwBdFNTxtclqqenISfwAzpKaMNFNmj4', crossorigin='anonymous')
+  script(src='https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-beta/js/bootstrap.min.js', integrity='sha384-h0AbiXch4ZDo7tp9hKZ4TsHbi047NrKGLO3SEJAg45jXxnGIfYzk4Si90RDIqNm1', crossorigin='anonymous')
+
+
+
+//-
+  ---------------------- COPY OF MY ORIGINAL HOME PAGE LAYOUT --- -KEEEP!!!!!!!
+  //- Atomic Films Brand Section
+  .container#af-brand
+    .atomicFilms-brand-text.float-left= brandName
+    .row.bg-dark
+      .col-12.col-md-10
+    nav.navbar.navbar-expand-md
+      button.navbar-toggler.bg-dark.text-center(type="button", data-toggle="collapse", data-target="#collapseNavbar") Menu
+        span.navbar-toggler-icon
+      #collapseNavbar.collapse.navbar-collapse
+        ul.nav.mx-auto.justify-content-center
+          li.nav-item
+            a.nav-link.active.font-weight-bold(href="/") Movies
+          li.nav-item
+            a.nav-link.active.font-weight-bold(href="/movies") Details
+          li.nav-item
+            a.nav-link.active.font-weight-bold(href="/movies/reserve") Reserve
+          li.nav-item
+            a.nav-link.active.font-weight-bold(href="/contact") Contact
+      .row.bg-dark
+    br
+    br
+    
+    block content
+    //- Footer Section
+    footer.text-left
+      .container
+        .row
+          p.af-footer-text.font-weight-bold 2017 &copy; Atomic Films
+
+    script(src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous")
+    script(src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.11.0/umd/popper.min.js" integrity="sha384-b/U6ypiBEHpOf/4+1nzFpr53nxSS+GLCkfwBdFNTxtclqqenISfwAzpKaMNFNmj4" crossorigin="anonymous")
+    script(src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-beta/js/bootstrap.min.js" integrity="sha384-h0AbiXch4ZDo7tp9hKZ4TsHbi047NrKGLO3SEJAg45jXxnGIfYzk4Si90RDIqNm1" crossorigin="anonymous")
