--- a/app/public/stylesheets/style.css
+++ b/app/public/stylesheets/style.css
@@ -61,6 +61,10 @@ i.fa-film {
   color: #3181BF;
 }
 
+.af-table-text {
+  font-size: 16px;
+}
+
 .bg-af-card-color {
   background-color: #4EA288;
 }
