--- a/app/app_server/views/layout.pug
+++ b/app/app_server/views/layout.pug
@@ -10,17 +10,19 @@ html
 
   body
     nav.navbar.navbar-expand-md.navbar-dark.bg-atomicfilms-color
-      .container-fluid
+      .container
         a.navbar-brand(href="/")
           .brand-text.float-left Atomic Films
             i.fa.fa-film.fa-sm(aria-hidden="true")
+          br
+          p.pl-5.pt-5.af-motto-font= pageHeader.brandMotto
         button.navbar-toggler(type="button", data-toggle="collapse", data-target="#mainNavBar")
           span.navbar-toggler-icon
         #mainNavBar.collapse.navbar-collapse
           ul.navbar-nav.ml-auto
             li.nav-item
-              a.nav-link.text-dark(href="/contact") Contact AF
-    p.lead.pl-5.pt-2.af-motto-font= pageHeader.brandMotto
+              a.nav-link(href="/contact") Contact AF
+    //
     br
     br
     
