--- a/app/app_server/views/movie-details.pug
+++ b/app/app_server/views/movie-details.pug
@@ -2,13 +2,11 @@ extends layout
 
 block content
   //- Movie Synopsis Section
-  section.jumbotron.text-center
+  section.jumbotron.text-center.af-header-font
     .container
       h1.jumbotron-heading-text= pageTitle
       br
       p.lead.text-justify= pageHeader.message
-    br
-    br
   each movie in movies 
     .container
       br
@@ -44,27 +42,28 @@ block content
                     td.af-table-text= movie.genres
                     td.af-table-text= movie.format 
                     td.af-table-text= movie.price
-    .row.bg-light
-      .col-12.col-md-12
-        .card-body
-        .row.pl-5.pr-5 
-          .col-12.col-md-
-            .btn-toolbar-justify-content-center(role="toolbar", aria-label="Show Times Toolbar")
-              p.text-justify= movie.summary
-              //h3.card-title-text.text-warning.text-center what could go here?
-              p.text-primary #{movie.frequency} in AF-Theater ##{movie.theater}:
-              .btn-group.mr-2(role="group", aria-label="First Showtime")
-                a.btn-link(href="/movies/reserve")
-                  button.btn.btn-outline-dark.text-success(type="button")= movie.showtimes[0]
-              .btn-group.mr-2(role="group", aria-label="Second Showtime")
-                a.btn-link(href="/movies/reserve")
-                  button.btn.btn-outline-dark.text-success(type="button")= movie.showtimes[1]
-              .btn-group.mr-2(role="group", aria-label="Third Showtime")
-                a.btn-link(href="/movies/reserve")
-                  button.btn.btn-outline-dark.text-success(type="button")= movie.showtimes[2]
-                  //button.btn.btn-success.float-right(type="submit") Next
-        //br
-    br                
+      .row.bg-light
+        .col-12.col-md-12
+          //.row.pl-5.pr-5.bg-warning 
+          .btn-toolbar-justify-content-center(role="toolbar", aria-label="Show Times Toolbar")
+            br
+            p.text-justify= movie.summary
+            //h3.card-title-text.text-warning.text-center what could go here?
+            p.lead #{movie.frequency} in AF-Theater ##{movie.theater}:
+            .btn-group.mr-2(role="group", aria-label="First Showtime")
+              a.btn-link(href="/movies/reserve")
+                button.btn.btn-outline-dark.text-primary(type="button")= movie.showtimes[0]
+            .btn-group.mr-2(role="group", aria-label="Second Showtime")
+              a.btn-link(href="/movies/reserve")
+                button.btn.btn-outline-dark.text-primary(type="button")= movie.showtimes[1]
+            .btn-group.mr-2(role="group", aria-label="Third Showtime")
+              a.btn-link(href="/movies/reserve")
+                button.btn.btn-outline-dark.text-primary(type="button")= movie.showtimes[2]
+                //button.btn.btn-success.float-right(type="submit") Next
+          br
+          //br
+    
+                  
 //-                    
     each movie in movies
       img.img-fluid.mr-auto.d-block.border.border-dark(width="25%", src= movie.poster)
