--- a/app/app_server/views/reserve-movie.pug
+++ b/app/app_server/views/reserve-movie.pug
@@ -1,9 +1,9 @@
 extends layout
 
 block content
-  section.jumbotron.text-center.bg-success
+  section.jumbotron.text-center.bg-dark
     .container
-      h1.jumbotron-heading-text= pageTitle
+      h1.jumbotron-heading-text.text-light= pageTitle
       br
       p.lead.text-justify= pageHeader.message
     //.card
