--- a/app/app_server/views/movie-details.pug
+++ b/app/app_server/views/movie-details.pug
@@ -2,9 +2,9 @@ extends layout
 
 block content
   //- Movie Synopsis Section
-  section.jumbotron.text-center.af-header-font
+  section.jumbotron.text-center.af-header-font.bg-dark
     .container
-      h1.jumbotron-heading-text= pageTitle
+      h1.jumbotron-heading-text.text-light= pageTitle
       br
       p.lead.text-justify= pageHeader.message
   each movie in movies 
@@ -42,23 +42,23 @@ block content
                     td.af-table-text= movie.genres
                     td.af-table-text= movie.format 
                     td.af-table-text= movie.price
-      .row.bg-light
+      .row.bg-dark
         .col-12.col-md-12
           //.row.pl-5.pr-5.bg-warning 
           .btn-toolbar-justify-content-center(role="toolbar", aria-label="Show Times Toolbar")
-            br
-            p.text-justify= movie.summary
+            p.lead Synopsis:
+            p.text-justify.text-light= movie.summary
             //h3.card-title-text.text-warning.text-center what could go here?
             p.lead #{movie.frequency} in AF-Theater ##{movie.theater}:
             .btn-group.mr-2(role="group", aria-label="First Showtime")
               a.btn-link(href="/movies/reserve")
-                button.btn.btn-outline-dark.text-primary(type="button")= movie.showtimes[0]
+                button.btn.btn-outline-light.text-success(type="button")= movie.showtimes[0]
             .btn-group.mr-2(role="group", aria-label="Second Showtime")
               a.btn-link(href="/movies/reserve")
-                button.btn.btn-outline-dark.text-primary(type="button")= movie.showtimes[1]
+                button.btn.btn-outline-light.text-success(type="button")= movie.showtimes[1]
             .btn-group.mr-2(role="group", aria-label="Third Showtime")
               a.btn-link(href="/movies/reserve")
-                button.btn.btn-outline-dark.text-primary(type="button")= movie.showtimes[2]
+                button.btn.btn-outline-light.text-success(type="button")= movie.showtimes[2]
                 //button.btn.btn-success.float-right(type="submit") Next
           br
           //br
