--- a/app/app_server/views/reserve-movie.pug
+++ b/app/app_server/views/reserve-movie.pug
@@ -3,7 +3,7 @@ extends layout
 block content
   section.jumbotron.text-center.bg-dark
     .container
-      h1.jumbotron-heading-text.text-light= pageTitle
+      h1.af-pageTitle-font= pageTitle
       br
       p.lead.text-justify= pageHeader.message
     //.card
