Minor fix to appearance

--- a/app/app_server/views/movie-details.pug
+++ b/app/app_server/views/movie-details.pug
@@ -7,7 +7,7 @@ block content
     //h1.jumbotron-heading-text.text-light= pageTitle
     h1.af-pageTitle-font.text-center= pageTitle
     br
-    p.lead.text-justify.text-center= pageHeader.message
+    p.lead.text-justify.text-center.text-dark= pageHeader.message
   if errorMsg
     .alert.alert-danger= errorMsg
   .container
